<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tunnel.activity.footage">

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:text="日报"
        android:textColor="#FCFCFC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_jinchi"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_jinchi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:text="进尺"
        android:textColor="#FCFCFC"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button_rizhi"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rizhi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:background="#FF5722"
        android:text="日志"
        android:textColor="#FCFCFC"
        android:textColorHighlight="#E91E63"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toStartOf="@+id/button_jinchi"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:transformPivotX="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rizhi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="204dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="一分部"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="428dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:text="@string/桃坪隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:text="@string/乌石咀隧道进口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/乌石咀隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/郑家1号隧道进口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/郑家1号隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/郑家2号隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/郑家2号隧道进口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="204dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="二分部"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="162dp"
                    android:layout_height="wrap_content"
                    android:text="@string/梯子岭隧道进口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/梯子岭隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:text="@string/排子隧道进口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:text="@string/排子隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/勾鼻墩1号隧道进口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/勾鼻墩2号隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/柯树下隧道进口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:text="@string/柯树下隧道出口"
                    android:textSize="18sp"
                    android:textColor="#2196F3" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TableRow>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="结束时间"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:ems="10" />


            </LinearLayout>


            <Button
                android:id="@+id/button_search"
                android:layout_width="111dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="54dp"
                android:gravity="center"
                android:text="查询"
                android:textSize="24sp"
                android:textStyle="bold"
                android:translationX="150dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>