<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tunnel.activity.MainActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:text="日报"
        android:textColor="#FCFCFC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_jinchi"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_jinchi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:text="进尺"
        android:textColor="#FCFCFC"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button_rizhi"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rizhi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:background="#FF5722"
        android:text="日志"
        android:textColor="#FCFCFC"
        android:textColorHighlight="#E91E63"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toStartOf="@+id/button_jinchi"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rizhi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="204dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="一分部"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="204dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="二分部"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/桃坪隧道出口"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:textColor="#2196F3"
                        android:textColorLink="#2196F3"
                        android:visibility="visible"

                        />

                    <CheckBox
                        android:id="@+id/checkBox11"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/梯子岭隧道进口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/乌石咀隧道进口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />

                    <CheckBox
                        android:id="@+id/checkBox12"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/梯子岭隧道出口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/乌石咀隧道出口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />

                    <CheckBox
                        android:id="@+id/checkBox13"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/排子隧道进口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/郑家1号隧道进口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />

                    <CheckBox
                        android:id="@+id/checkBox14"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/排子隧道出口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/郑家1号隧道出口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />

                    <CheckBox
                        android:id="@+id/checkBox15"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/勾鼻墩1号隧道进口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox6"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/郑家2号隧道进口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />

                    <CheckBox
                        android:id="@+id/checkBox16"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/勾鼻墩2号隧道出口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox7"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/郑家2号隧道出口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />

                    <CheckBox
                        android:id="@+id/checkBox17"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/柯树下隧道进口"
                        android:textSize="18sp"
                        android:textColor="#2196F3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox18"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/柯树下隧道出口"
                        android:textSize="18sp"
                        android:textColor="#2196F3"
                        android:translationX="204dp" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="开始时间"

                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:ems="10" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="结束时间"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:ems="10" />

            </LinearLayout>

            <Button
                android:id="@+id/button_search1"
                android:layout_width="197dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="查询"
                android:textSize="24sp"
                android:translationX="100dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>